README: full operator setup instructions
Walks third-party Reality node operators through: download + SHA-256
verify, keystore generation, config.env template (with the rotated
SENTIMENT_PUBLIC_KEY, libp2p relay, NET L0 testnet endpoints, and
deliberately-empty Sentiment-chain bootstrap pending public host
selection), the run-validator command pattern, manual L1 cluster join
to work around the SDK ordering bug, verification endpoints, reward
distribution overview, and a troubleshooting table covering the
common failure modes.